@@ -1,3 +1,15 @@
+oslo.messaging-check-tool (1.0-1~u14.04+mos3) mos8.0; urgency=medium
+
+  * Added HTTP listen port parameter to client app
+
+ -- Dmitry Mescheryakov <dmescheryakov@mirantis.com>  Fri, 25 May 2016 17:42:23 +0300
+
+oslo.messaging-check-tool (1.0-1~u14.04+mos2) mos8.0; urgency=medium
+
+  * Added topic name parameter
+
+ -- Dmitry Mescheryakov <dmescheryakov@mirantis.com>  Fri, 17 May 2016 18:42:23 +0300
+
 oslo.messaging-check-tool (1.0-1~u14.04+mos1) mos8.0; urgency=medium
 
   * The initial version of the package 
